--- a/indium new website/contact us/contact.html
+++ b/indium new website/contact us/contact.html
@@ -8,16 +8,41 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav role="navigation" class="primary-navigation">
             <div class="logo">
-                <h1>Indium Laboratory</h1>
+                <img src="../../images/main logo.png" style="width: 100px; filter: brightness(500%);">
             </div>
-            <ul class="nav-links">
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul class="nav-links" id="nav-links">
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/about/about.html">About Us</a></li>
                 <li><a href="/ourleaders/our.html">Our Leaders</a></li>
                 <li><a href="/research/research.html">Research</a></li>
-                <li><a href="/people/People.html">People</a></li>
+                <li class="has-dropdown">
+                    <a href="#">People &dtrif;</a>
+                    <div class="sub-menu-1">
+                        <ul>
+                            <li><a href="/people/principal/principal.html">Principal Investigator</a></li>
+                            <li><a href="/people/student/student.html">Student Interns</a></li>
+                            <li><a href="/people/Research Interns/intern.html">Research Interns</a></li>
+                            <li><a href="/people/Research Scholars/scholars.html">Research Scholars</a></li>
+                            <li><a href="/people/Collab/collab.html">Collaborators</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="has-dropdown">
+                    <a href="#">Our Startups &dtrif;</a>
+                    <div class="sub-menu-1">
+                        <ul>
+                            <li><a href="/Our Startups/alchemiera/alchemiera.html">Alchemiera</a></li>
+                            <li><a href="/Our Startups/Quallatice/quallatice.html">Quallatice</a></li>
+                        </ul>
+                    </div>
+                </li>
                 <li><a href="/opportunities.html">Opportunities</a></li>
                 <li><a href="/consultancy/consultancy.html">Consultancy Services</a></li>
                 <li><a href="/contact us/contact.html">Contact Us</a></li>
@@ -83,6 +108,19 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31062.801499887755!2d77.59382540000001!3d13.2972973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3df04c9efe91%3A0x74ef0f7e2f81d564!2sGitam%20University%20Bengaluru!5e0!3m2!1sen!2sin!4v1734950569510!5m2!1sen!2sin" 
             width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+
+    <footer>
+        <p>&copy; 2024 Indium Laboratory. All rights reserved.</p>
+    </footer>
+
+    <script>
+        const hamburger = document.getElementById('hamburger');
+        const navLinks = document.getElementById('nav-links');
+    
+        hamburger.addEventListener('click', () => {
+            navLinks.classList.toggle('show');
+        });
+    </script>
     
 </body>
 </html>
