--- a/indium new website/ourleaders/our.html
+++ b/indium new website/ourleaders/our.html
@@ -8,17 +8,44 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav role="navigation" class="primary-navigation">
             <div class="logo">
-                <h1>Indium Laboratory</h1>
+                <img src="../images/main logo.png" style="width: 100px; filter: brightness(500%);">
             </div>
-            <ul class="nav-links">
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul class="nav-links" id="nav-links">
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/about/about.html">About Us</a></li>
-                <li><a href="our.html">Our Leaders</a></li>
+                <li><a href="/ourleaders/our.html">Our Leaders</a></li>
                 <li><a href="/research/research.html">Research</a></li>
-                <li><a href="/people/People.html">People</a></li>
+                <li class="has-dropdown">
+                    <a href="#">People &dtrif;</a>
+                    <div class="sub-menu-1">
+                        <ul>
+                            <li><a href="/people/principal/principal.html">Principal Investigator</a></li>
+                            <li><a href="/people/student/student.html">Student Interns</a></li>
+                            <li><a href="/people/Research Interns/intern.html">Research Interns</a></li>
+                            <li><a href="/people/Research Scholars/scholars.html">Research Scholars</a></li>
+                            <li><a href="/people/Collab/collab.html">Collaborators</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="has-dropdown">
+                    <a href="#">Our Startups &dtrif;</a>
+                    <div class="sub-menu-1">
+                        <ul>
+                            <li><a href="/Our Startups/alchemiera/alchemiera.html">Alchemiera</a></li>
+                            <li><a href="/Our Startups/Quallatice/quallatice.html">Quallatice</a></li>
+                        </ul>
+                    </div>
+                </li>
                 <li><a href="/opportunities.html">Opportunities</a></li>
+                <li><a href="/consultancy/consultancy.html">Consultancy Services</a></li>
+                <li><a href="/contact us/contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -26,14 +53,13 @@
     <main>
         <section class="banner">
             <div class="banner-text">
-                <!-- <img class="bannerlogo" src="/main photo lab.jpg"> -->
                 <h1>Words Of Pro Vice Chancellor</h1>
             </div>
         </section>
 
         <section class="profile">
             <div class="profile-photo">
-                <img src="https://lh4.googleusercontent.com/eNHqYSV0xB0TK2TArD8uIS_YcFrZhWa9wUXBK4llKsPu_1i1ByIs5hdE98EdJ0rr1AqNDPHdrrjkRjFZYs66BlOt8Vdb9o_xSj_mAOGB5EskmXllhctipO37Q4oeFceVlw=w1280" alt="Pro-Vice">
+                <img src="../images/provice.jpg" alt="Pro-Vice">
             </div>
             <div class="profile-info">
                 <h2>Prof. KNS Acharya</h2>
@@ -41,38 +67,7 @@
                 <br>
                 <p class="des">
                     Welcome to the world of Indium Laboratory!!!, where innovation knows no bounds, and excellence is our guiding principle. It is with great pleasure that I extend my warmest greetings to you as we embark on a journey of discovery and advancement together. At Indium Lab, our dedication to pushing the boundaries of scientific exploration is evident in every facet of our research. From pioneering biosensors for early disease detection to revolutionising hydrogen production with cutting-edge fuel cell technology, our pursuits transcend traditional boundaries to deliver tangible solutions for a brighter, sustainable future. In the realm of semiconductor technology, our commitment to excellence shines through in our relentless pursuit of advancements in photodetectors and memristors. These breakthroughs not only redefine the possibilities of data storage and processing but also pave the way for transformative applications in imaging, sensing, and communication technologies. Driven by a culture of integrity and empathy, our team is fueled by a shared passion for making a positive impact on society. Together, we strive to harness the power of innovation to address the most pressing challenges of our time, from enhancing healthcare to safeguarding the environment. As you explore our website, I invite you to join us on this exciting journey of discovery and innovation. Together, let us shape a future where possibilities are limitless, and progress knows no bounds.
-                </p>        
-            </div>
-        </section>
-
-        <!-- aijay sir -->
-        
-
-        <section class="profile">
-            <div class="profile-photo">
-                <img src="https://lh4.googleusercontent.com/eNHqYSV0xB0TK2TArD8uIS_YcFrZhWa9wUXBK4llKsPu_1i1ByIs5hdE98EdJ0rr1AqNDPHdrrjkRjFZYs66BlOt8Vdb9o_xSj_mAOGB5EskmXllhctipO37Q4oeFceVlw=w1280" alt="Pro-Vice">
-            </div>
-            <div class="profile-info">
-                <h2>Aijay Mandava</h2>
-                <p class="h5"><strong>Associate Professor</strong></p>
-                <br>
-                <p class="des">
-                    Welcome to the world of Indium Laboratory!!!, where innovation knows no bounds, and excellence is our guiding principle. It is with great pleasure that I extend my warmest greetings to you as we embark on a journey of discovery and advancement together. At Indium Lab, our dedication to pushing the boundaries of scientific exploration is evident in every facet of our research. From pioneering biosensors for early disease detection to revolutionising hydrogen production with cutting-edge fuel cell technology, our pursuits transcend traditional boundaries to deliver tangible solutions for a brighter, sustainable future. In the realm of semiconductor technology, our commitment to excellence shines through in our relentless pursuit of advancements in photodetectors and memristors. These breakthroughs not only redefine the possibilities of data storage and processing but also pave the way for transformative applications in imaging, sensing, and communication technologies. Driven by a culture of integrity and empathy, our team is fueled by a shared passion for making a positive impact on society. Together, we strive to harness the power of innovation to address the most pressing challenges of our time, from enhancing healthcare to safeguarding the environment. As you explore our website, I invite you to join us on this exciting journey of discovery and innovation. Together, let us shape a future where possibilities are limitless, and progress knows no bounds.
-                </p>        
-            </div>
-        </section>
-        <!-- director -->
-        <section class="profile">
-            <div class="profile-photo">
-                <img src="https://lh4.googleusercontent.com/eNHqYSV0xB0TK2TArD8uIS_YcFrZhWa9wUXBK4llKsPu_1i1ByIs5hdE98EdJ0rr1AqNDPHdrrjkRjFZYs66BlOt8Vdb9o_xSj_mAOGB5EskmXllhctipO37Q4oeFceVlw=w1280" alt="Pro-Vice">
-            </div>
-            <div class="profile-info">
-                <h2>Basava Raj</h2>
-                <p class="h5"><strong>Associate Professor</strong></p>
-                <br>
-                <p class="des">
-                    Welcome to the world of Indium Laboratory!!!, where innovation knows no bounds, and excellence is our guiding principle. It is with great pleasure that I extend my warmest greetings to you as we embark on a journey of discovery and advancement together. At Indium Lab, our dedication to pushing the boundaries of scientific exploration is evident in every facet of our research. From pioneering biosensors for early disease detection to revolutionising hydrogen production with cutting-edge fuel cell technology, our pursuits transcend traditional boundaries to deliver tangible solutions for a brighter, sustainable future. In the realm of semiconductor technology, our commitment to excellence shines through in our relentless pursuit of advancements in photodetectors and memristors. These breakthroughs not only redefine the possibilities of data storage and processing but also pave the way for transformative applications in imaging, sensing, and communication technologies. Driven by a culture of integrity and empathy, our team is fueled by a shared passion for making a positive impact on society. Together, we strive to harness the power of innovation to address the most pressing challenges of our time, from enhancing healthcare to safeguarding the environment. As you explore our website, I invite you to join us on this exciting journey of discovery and innovation. Together, let us shape a future where possibilities are limitless, and progress knows no bounds.
-                </p>        
+                </p>
             </div>
         </section>
     </main>
@@ -80,5 +75,13 @@
     <footer>
         <p>&copy; 2024 Indium Laboratory. All rights reserved.</p>
     </footer>
+    <script>
+        const hamburger = document.getElementById('hamburger');
+        const navLinks = document.getElementById('nav-links');
+    
+        hamburger.addEventListener('click', () => {
+            navLinks.classList.toggle('show');
+        });
+    </script>
 </body>
 </html>
